# maskara

./: .env.example  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.fr.md  README.md  SECURITY.md  TODO.md  aegra.json  docker-compose.yml  mkdocs.yml  pyproject.toml  zensical.fr.toml  zensical.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  docker.yml  docs.yml  release.yml  sprint1-ci.yml
bundles/core/: manifest.json  pyproject.toml
docker/: Dockerfile  hadolint.yaml
docker/scripts/: backup.sh  restore.sh
docs/: anonymizer.md  architecture.md  configuration.md  devto_article_draft.en.md  devto_article_draft.md  getting-started.md  index.md  mcpb-install.md  middleware.md
docs/en/: architecture.md  extending.md  getting-started.md  glossary.md  index.md  limitations.md  placeholder-factories.md  roadmap.md  security.md  why-anonymize.md
docs/fr/: architecture.md  extending.md  getting-started.md  glossary.md  index.md  limitations.md  multi-instance.md  placeholder-factories.md  roadmap.md  security.md  (+1 more)
scripts/: build_mcpb.py  tes_span_replacer.py
tests/: conftest.py  test_anonymizer.py  test_composite_detector.py  test_conftest_fixtures.py  test_detector_examples.py  test_entity_conflict_resolver.py  test_guard.py  test_guard_llm.py  test_middleware.py  test_models.py  test_optional_dependencies.py  test_pipeline.py  test_pipeline_memory.py  test_placeholder.py  test_presets.py  test_regex_detector.py  test_span_replacer.py  test_utils.py
(+222 files in other folders)
