[project]
name = "maskara"
version = "0.1.0"
description = "Maskara is a tool for anonymizing sensitive data in text using AI models."
requires-python = ">=3.12"

dependencies = [
    "gliner2>=1.2",
    "faker>=40.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/maskara"]

[dependency-groups]
dev = [
    "ruff>=0.15.5",
    "pytest>=8.0",
    "pyrefly>=0.55.0",
    "zensical>=0.0.27",
    "commitizen>=4.13.9",
]
examples = [
    "aegra-cli>=0.8.3",
    "aiosqlite>=0.22.1",
    "keyshield[argon2,fastapi]>=2.0.0",
    "langchain>=1.2.13",
    "langchain-openai>=1.1.11",
    "langfuse>=4.0.1",
    "langgraph>=1.1.3",
    "loguru>=0.7.3",
    "python-dotenv>=1.2.2",
]
